--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div id="logo">
       <p>
         <a href="https://www.sendblaster.com" title="Go back to the homepage">
-          <img width="324" height="54" src="../assets/img/logo.png" alt="SendBlaster bulk email software">
+          <img width="324" height="54" src="assets/img/logo.png" alt="SendBlaster bulk email software">
         </a>
       </p>
     </div>
