--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,10 @@
 
     <ul class="horizontalList">
       <li class="main-section">
-        <a href="https://www.sendblaster.com/desktop-e-mail-marketing-software-features/">
-          <div>Home</div>
-        </a>
+        <a routerLink="">Home</a>
       </li>
       <li class="main-section">
-        <a href="https://www.sendblaster.com/desktop-e-mail-marketing-software-features/">
-          <div>Home2</div>
-        </a>
+        <a routerLink="tutorials">Tutorials</a>
       </li>
     </ul>
   </div>
@@ -28,6 +24,11 @@
     Trouble Ticket Support
   </div>
 </div>
+
+<div class="body-inner">
+  <router-outlet></router-outlet>
 </div>
 
-<router-outlet></router-outlet>
+
+</div>
+
