--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,3 +49,9 @@ li.main-section a, a:link, a:visited, a:focus, a:hover, a:active{
     line-height: 64px;
     vertical-align: middle;
 }
+
+.body-inner{
+    margin: 0 auto;
+    height: 64px;
+    width: 968px;    
+}
