--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -1,5 +1,80 @@
-<div class="inner-content main-title">
+<div class="tutorial">
+  <div class="inner-content main-title">
+  <h2>
+    Introduction
+  </h2>
+  In this tutorial you will learn to:
+  <ul>
+      <li>Download SendBlaster</li>
+      <li>Install SendBlaster</li>
+  </ul>
   <p>
-    download-install works!
+  We will show how to download and install SendBlaster in Windows 10, however SendBlaster can be installed on any windows version.
   </p>
+  <p class="info">
+  <span class="font-weight-bold">Note:</span> While SendBlaster is a windows based Bulk Emailer, it may still be installed on MacOs, following this article: 
+  <a class="font-weight-bold" href="https://www.sendblaster.com/sendblaster-on-Mac-how-it-works" title="Sendblaster on Mac? Here's how it works">Sendblaster on Mac? Here’s how it works</a>
+  </p>
+</div>
+
+
+
+<div class="inner-content main-title">
+  <h2>
+      System requirements
+  </h2>
+  <ul>
+      <li class="font-weight-bold">Windows XP / Windows Vista / Windows 7 / Windows 8 / Windows 10</li>
+      <li>Microsoft Internet Explorer 8 or higher</li>
+      <li>100 MB of available hard-disk space</li>
+      <li>1 GB of RAM</li>
+      <li>Internet connection (broadband connection recommended)</li>
+  </ul>  
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Download SendBlaster
+    </h2>
+<p>
+  In order to Download SendBlaster, please navigate to the 
+  <a class="font-weight-bold" href="https://www.sendblaster.com/download-email-marketing-software/" title="SendBlaster Download">official download page</a>, or use the bellow button.
+</p>
+<p style="text-align: center; "><a href="https://www.sendblaster.com/sendblaster/services/download/download.php?program=sendblasterfree" title="Download SendBlaster for Free" class="download-button">Download for Free</a></p> 
+ <img class="screenshot" src="./assets/img/download-install/unzip-sendblaster.png" alt="Unzip SendBlaster">
+ <p>
+   Notice that SendBlaster is downloaded as a compressed <b>zip</b> file, it´s important that you extract the content of this file to a <b>local folder</b>.<br/>
+ </p>
+ <p>
+ In this example, the compressed zip file has been downloaded to <em><b>"C:\SendBlaster"</b></em> and the content (<b>setup.exe</b>) file has been extracted.
+ </p>
+ </div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Install SendBlaster
+    </h2>
+<p>
+After you have completed the previous step, you can see SendBlaster installer file <b>setup.exe</b>, double click on this file to start the install process.
+</p>
+<p class="info">
+  <span class="font-weight-bold">Note:</span> SendBlaster installer can be run under any regular Windows user account, 
+    however under rare Windows security configurations, it´s possible that the installer may require elevated priviledges.
+    <br/> <br/>
+    If during installation you get any error that looks like something related to writting security, you may right click 
+    on setup.exe file and select the option to "run as administrator". If you still get issues on the installation, as usual,
+    refere to <a href="#TroubleShooting">Trouble Shooting</a>.
+</p>
+</div>
+
+<a name="TroubleShooting"></a> 
+<div class="inner-content main-title clearfix">
+    <h2>
+        Trouble Shooting
+    </h2>
+<p>
+Troubleshooting info
+</p>
+</div>
+
 </div>
