--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -10,7 +10,7 @@
   </ul>
   <p>
   We will show how to download and install SendBlaster in Windows 10, however SendBlaster can be installed on any windows version.
-  </p>
+</p>
   <p class="info">
   <span class="font-weight-bold">Note:</span> While SendBlaster is a windows based Bulk Emailer, it may still be installed on MacOs, following this article: 
   <a class="font-weight-bold" href="https://www.sendblaster.com/sendblaster-on-Mac-how-it-works/" title="Sendblaster on Mac? Here's how it works">Sendblaster on Mac? Here’s how it works</a>
@@ -63,14 +63,58 @@ After you have completed the previous step, you can see SendBlaster installer fi
     <br/> <br/>
     If during installation you get any error that looks like something related to writting security, you may right click 
     on setup.exe file and select the option to "run as administrator". If you still get issues on the installation, as usual,
-    refere to <a href="#TroubleShooting">Trouble Shooting</a>.
+    refere to <a class="font-weight-bold" (click)="scroll(TroubleShooting)">Troubleshooting SendBlaster Installation</a>.
 </p>
 </div>
 
-<a name="TroubleShooting"></a> 
 <div class="inner-content main-title clearfix">
     <h2>
-        Trouble Shooting
+        Preparing to Install
+    </h2>
+<img class="screenshot" src="./assets/img/download-install/sendblaster-preparing-install.png" alt="Preparing to Install SendBlaster">    
+<p>
+After you executed the installer file <b>setup.exe</b>, the install wizard will be executed, it will prepare everything in your computer 
+so SendBlaster can be installed. Wait for a few seconds...
+</p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        SendBlaster License Agreement
+    </h2>
+<div style="overflow: hidden;">
+<img class="screenshot" src="./assets/img/download-install/sendblaster-license-agreement.png" alt="SendBlaster Liceense Agreement.">    
+<p>
+    Before you can use SendBlaster, you´re required to understand and accept SendBlaster License Agreement.
+</p>
+<p>
+    In short, SendBlaster is owned by Delivery Tech Corp and protected by copyright laws and international copyright treaties, 
+    as well as other intellectual property laws and treaties. 
+</p>
+<p>
+    We suggest you read the complete License Agreement, it´s not long.
+</p>
+<p>
+    After you´re done reading, please make sure you select the <em><b>"I accept the terms in the license agreement"</b></em> option,
+    and hit <em><b>"Next"</b></em> button.
+</p>
+</div>
+<p class="info clearfix">
+    <span class="font-weight-bold">Note:</span> You will allways be able to find the last updated version of SendBlaster License Agreement
+    at: <a href="https://www.sendblaster.com/sendblaster-license-agreement/" title="SendBlaster License Agreement"><b>SendBlaster License Agreement</b></a>.
+  </p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Customer Information
+    </h2>
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-customer-information.png" alt="Customer Information">
+</div>
+
+<div #TroubleShooting class="inner-content main-title clearfix">
+    <h2>
+        Troubleshooting SendBlaster Installation
     </h2>
 <p>
 Troubleshooting info
