--- a/src/app/tutorials/tutorials.component.html
+++ b/src/app/tutorials/tutorials.component.html
@@ -1,115 +1,6 @@
 <div class="grid-top-pad">
-  <div class class="card-wrap">
-  <div class="card">
-    <div class="card-image" style="background-color: rgb(195, 90, 255);">
-      <a  routerLink="download-install">
-      <div class="image-bg" style="background-image: url(&quot;./assets/img/tutorials/download-install.jpg&quot;);"></div>
-      </a>
-    </div>
-    <div class="card-content-frame">
-      <a class="card-content fixed" routerLink="download-install">
-        <span class="title">Download & Install SendBlaster</span>
-        <p class="desc">(Free and Pro editions)</p>
-      </a>
-      <div class="card-bottom">
-        <span class="level">
-          <span class="diff-badge beginner"></span>
-          <span>Beginner</span>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class class="card-wrap">
-  <div class="card">
-    <div class="card-image" style="background-color: rgb(195, 90, 255);">
-      <a  routerLink="download-install">
-      <div class="image-bg" style="background-image: url(&quot;./assets/img/tutorials/download-install.jpg&quot;);"></div>
-      </a>
-    </div>
-    <div class="card-content-frame">
-      <a class="card-content fixed" routerLink="download-install">
-        <span class="title">Download & Install SendBlaster</span>
-        <p class="desc">(Free and Pro editions)</p>
-      </a>
-      <div class="card-bottom">
-        <span class="level">
-          <span class="diff-badge beginner"></span>
-          <span>Beginner</span>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class class="card-wrap">
-  <div class="card">
-    <div class="card-image" style="background-color: rgb(195, 90, 255);">
-      <a  routerLink="download-install">
-      <div class="image-bg" style="background-image: url(&quot;./assets/img/tutorials/download-install.jpg&quot;);"></div>
-      </a>
-    </div>
-    <div class="card-content-frame">
-      <a class="card-content fixed" routerLink="download-install">
-        <span class="title">Download & Install SendBlaster</span>
-        <p class="desc">(Free and Pro editions)</p>
-      </a>
-      <div class="card-bottom">
-        <span class="level">
-          <span class="diff-badge beginner"></span>
-          <span>Beginner</span>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class class="card-wrap">
-  <div class="card">
-    <div class="card-image" style="background-color: rgb(195, 90, 255);">
-      <a  routerLink="download-install">
-      <div class="image-bg" style="background-image: url(&quot;./assets/img/tutorials/download-install.jpg&quot;);"></div>
-      </a>
-    </div>
-    <div class="card-content-frame">
-      <a class="card-content fixed" routerLink="download-install">
-        <span class="title">Download & Install SendBlaster</span>
-        <p class="desc">(Free and Pro editions)</p>
-      </a>
-      <div class="card-bottom">
-        <span class="level">
-          <span class="diff-badge beginner"></span>
-          <span>Beginner</span>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class class="card-wrap">
-  <div class="card">
-    <div class="card-image" style="background-color: rgb(195, 90, 255);">
-      <a  routerLink="download-install">
-      <div class="image-bg" style="background-image: url(&quot;./assets/img/tutorials/download-install.jpg&quot;);"></div>
-      </a>
-    </div>
-    <div class="card-content-frame">
-      <a class="card-content fixed" routerLink="download-install">
-        <span class="title">Download & Install SendBlaster</span>
-        <p class="desc">(Free and Pro editions)</p>
-      </a>
-      <div class="card-bottom">
-        <span class="level">
-          <span class="diff-badge beginner"></span>
-          <span>Beginner</span>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<app-tutorial-card title="Download & Install SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="green" imageurl="./assets/img/tutorials/download-install.jpg" level="Beginner" routerLink="download-install"></app-tutorial-card>
 
 
 </div>
