--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -118,12 +118,33 @@ so SendBlaster can be installed. Wait for a few seconds...
         You will also be required to specify wether SendBlaster will be available for <em><b>"Anyone who uses this computer"</b></em> or <em><b>"Only for me"</b></em>. If there are several windows user accounts created in your computer, and you select the first option, then all windows users will be able to use SendBlaster, on the other hand, if you select the second option, only you will be able to use SendBlaster.
     </p>
 </div>
+<p class="clearfix">   
+    After you´re done setting required information, hit <em><b>"Next"</b></em> button.
+</p>
 <p class="info clearfix">
     <span class="font-weight-bold">Note:</span> If you have several windows user accounts and you want to provide access to SendBlaster to more than one windows account, but not <em><b>"Anyone who uses this computer"</b></em> select <em><b>"Only for me"</b></em> option, and repeat the entire installation process under each windows user account where you want to provide access to SendBlaster.
 </p>
 <p class="info clearfix">
     <span class="font-weight-bold">Note:</span> While it´s possible to install SendBlaster under more than one windows user account, each installation will be treated as an independant installation, ie: if there´s a windows account named Joe, and another windows account namde Jane, then Joe and Jane will not share contact lists or any other SendBlaster data, each user will have a completly different set of user data.
 </p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Install Folder
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-install-folder.png" alt="SendBlaster Install Folder">
+    <p>
+        By default, SendBlaster will be installed under <em><b>"C:\Program Files (x86)\SendBlaster4"</b></em>, however you may decide to change it.
+    </p>
+    <p>
+        We advice you leave it to the default value, but if for any reason you need to change the installation folder, make sure you specify an install folder that resides on a non-removable disk!
+    </p>
+    <p>   
+        After you´re done setting selecting desired installation folder, hit <em><b>"Next"</b></em> button.
+    </p>
+</div>
 </div>
 
 <div #TroubleShooting class="inner-content main-title clearfix">
