--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -17,8 +17,6 @@
   </p>
 </div>
 
-
-
 <div class="inner-content main-title">
   <h2>
       System requirements
@@ -147,13 +145,56 @@ so SendBlaster can be installed. Wait for a few seconds...
 </div>
 </div>
 
+<div class="inner-content main-title clearfix">
+    <h2>
+        Install Process
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-wizard-installing.png" alt="SendBlaster Install Folder">
+    <p>
+        This step will install SendBlaster according to the information provided in previous steps, the installer will copy files to your computer.
+    </p>
+    <p>   
+        After installation finishes, hit <em><b>"Next"</b></em> button.
+    </p>
+</div>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Finishing Installation
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-installation-completed.png" alt="SendBlaster Install Folder">
+    <p>
+        <b>Congratulations!</b> This screen confirms that SendBlaster has been sucessfully installed on your computer.
+    </p>
+    <p>   
+        Hit <em><b>"Finish"</b></em> button to close the install wizard.
+    </p>
+</div>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Suggested Tutorials:
+    </h2>
+    <div style="overflow: hidden;">   
+        <ul>
+            <li><a class="font-weight-bold" routerLink = "/tutorials/register">Registering your SendBlaster Installation (Free or Pro Editions)</a></li>
+            <li><a class="font-weight-bold" (click)="scroll(Install)">Sending your first email</a></li>
+        </ul>
+</div>
+</div>
+
 <div #TroubleShooting class="inner-content main-title clearfix">
     <h2>
         Troubleshooting SendBlaster Installation
     </h2>
 <p>
-Troubleshooting info
+If you face any problem during SendBlaster installation, or you have any question related to installing SendBlaster, please submit a <b>Trouble Ticket</b> by using the bellow button:
 </p>
+<p style="text-align: center; "><a target="_blank" href="https://www.sendblaster.com/services/support/ticketing/system/?lang=en" title="Submit Trouble Ticket" class="submit-ticket">Submit Trouble Ticket</a></p> 
 </div>
 
 </div>
