--- a/src/app/tutorials/tutorials.component.html
+++ b/src/app/tutorials/tutorials.component.html
@@ -1,6 +1,7 @@
 <div class="grid-top-pad">
 
 <app-tutorial-card title="Download & Install SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="green" imageurl="./assets/img/tutorials/download-install.jpg" level="Beginner" routerLink="download-install"></app-tutorial-card>
+<app-tutorial-card title="Register SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="white" imageurl="./assets/img/tutorials/register-sendblaster.png" level="Beginner" routerLink="register"></app-tutorial-card>
 
 
 </div>
