--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -181,7 +181,7 @@ so SendBlaster can be installed. Wait for a few seconds...
     </h2>
     <div style="overflow: hidden;">   
         <ul>
-            <li><a class="font-weight-bold" routerLink = "/tutorials/register">Registering your SendBlaster Installation (Free or Pro Editions)</a></li>
+            <li><a class="font-weight-bold" routerLink = "/tutorials/register-sendblaster-free">Registering your SendBlaster Installation (Free Edition)</a></li>
             <li><a class="font-weight-bold" (click)="scroll(Install)">Sending your first email</a></li>
         </ul>
 </div>
