--- a/src/app/tutorials/register/register.component.html
+++ b/src/app/tutorials/register/register.component.html
@@ -1,3 +1,166 @@
+<div class="tutorial">
+  <div class="inner-content main-title">
+  <h2>
+    Introduction
+  </h2>
+  <p>
+  In this tutorial you will learn to register your SendBlaster Free Edition.
+  </p>
+  <h3>Why do I need to register my SendBlaster Free Edition?</h3>
+  <p>
+    Well, you may use SendBlaster Free edition for lifetime, that´s correct, <b>there´s no time limitation</b>. However, notice that after using SendBlaster Free edition for 7 days, you´re required to register and get a Free License.
+  </p>    
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Registering SendBlaster Free Edition
+    </h2>
 <p>
-  register works!
+  In order to Register SendBlaster Free Edition, please navigate to the 
+  <a class="font-weight-bold" href="https://www.sendblaster.com/register/" title="Register SendBlaster" target="_blank">official free registration page</a>.
 </p>
+ <p>
+  Make sure you fill all mandatory information, and check <i>"I accept privacy conditions"</i>, then hit the <b><i>confirm</i></b> button.
+</p>
+<p>
+  You will then receive an email containing important information, and of course your Free License details that would look like:
+</p>
+<p>
+    <b>E-mail</b>: <i>registered.user@gmail.com</i><br/>
+    <b>Registration code</b>: <i>75FA-563E-3573-6E67-8FF5</i>  
+</p>
+ </div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Inserting Your Free License Details In SendBlaster
+    </h2>
+<img class="screenshot" src="./assets/img/register-free/sendblaster-free-splash.png" alt="Inserting Free License Details in Splash Screen">    
+<p>
+Every time SendBlaster starts, it shows a splash screen while it´s being initialized, hit the <b><i>square</i></b> button to display the License window.
+</p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        SendBlaster License Agreement
+    </h2>
+<div style="overflow: hidden;">
+<img class="screenshot" src="./assets/img/download-install/sendblaster-license-agreement.png" alt="SendBlaster Liceense Agreement.">    
+<p>
+    Before you can use SendBlaster, you´re required to understand and accept SendBlaster License Agreement.
+</p>
+<p>
+    In short, SendBlaster is owned by Delivery Tech Corp and protected by copyright laws and international copyright treaties, 
+    as well as other intellectual property laws and treaties. 
+</p>
+<p>
+    We suggest you read the complete License Agreement, it´s not long.
+</p>
+<p>
+    After you´re done reading, please make sure you select the <em><b>"I accept the terms in the license agreement"</b></em> option,
+    and hit <em><b>"Next"</b></em> button.
+</p>
+</div>
+<p class="info clearfix">
+    <span class="font-weight-bold">Note:</span> You will allways be able to find the last updated version of SendBlaster License Agreement
+    at: <a href="https://www.sendblaster.com/sendblaster-license-agreement/" title="SendBlaster License Agreement"><b>SendBlaster License Agreement</b></a>.
+  </p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Customer Information
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-customer-information.png" alt="Customer Information">
+    <p>
+        This step will let you specify your <em><b>"user name"</b></em> and <em><b>"organization"</b></em>, when available this details will be retrived from your windows installation. You may specify any details here, SendBlaster will not actually make use of this information.  
+    </p>
+    <p>
+        You will also be required to specify wether SendBlaster will be available for <em><b>"Anyone who uses this computer"</b></em> or <em><b>"Only for me"</b></em>. If there are several windows user accounts created in your computer, and you select the first option, then all windows users will be able to use SendBlaster, on the other hand, if you select the second option, only you will be able to use SendBlaster.
+    </p>
+</div>
+<p class="clearfix">   
+    After you´re done setting required information, hit <em><b>"Next"</b></em> button.
+</p>
+<p class="info clearfix">
+    <span class="font-weight-bold">Note:</span> If you have several windows user accounts and you want to provide access to SendBlaster to more than one windows account, but not <em><b>"Anyone who uses this computer"</b></em> select <em><b>"Only for me"</b></em> option, and repeat the entire installation process under each windows user account where you want to provide access to SendBlaster.
+</p>
+<p class="info clearfix">
+    <span class="font-weight-bold">Note:</span> While it´s possible to install SendBlaster under more than one windows user account, each installation will be treated as an independant installation, ie: if there´s a windows account named Joe, and another windows account namde Jane, then Joe and Jane will not share contact lists or any other SendBlaster data, each user will have a completly different set of user data.
+</p>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Install Folder
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-install-folder.png" alt="SendBlaster Install Folder">
+    <p>
+        By default, SendBlaster will be installed under <em><b>"C:\Program Files (x86)\SendBlaster4"</b></em>, however you may decide to change it.
+    </p>
+    <p>
+        We advice you leave it to the default value, but if for any reason you need to change the installation folder, make sure you specify an install folder that resides on a non-removable disk!
+    </p>
+    <p>   
+        After you´re done setting selecting desired installation folder, hit <em><b>"Next"</b></em> button.
+    </p>
+</div>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Install Process
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-wizard-installing.png" alt="SendBlaster Install Folder">
+    <p>
+        This step will install SendBlaster according to the information provided in previous steps, the installer will copy files to your computer.
+    </p>
+    <p>   
+        After installation finishes, hit <em><b>"Next"</b></em> button.
+    </p>
+</div>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Finishing Installation
+    </h2>
+    <div style="overflow: hidden;">   
+    <img class="screenshot" src="./assets/img/download-install/sendblaster-installation-completed.png" alt="SendBlaster Install Folder">
+    <p>
+        <b>Congratulations!</b> This screen confirms that SendBlaster has been sucessfully installed on your computer.
+    </p>
+    <p>   
+        Hit <em><b>"Finish"</b></em> button to close the install wizard.
+    </p>
+</div>
+</div>
+
+<div class="inner-content main-title clearfix">
+    <h2>
+        Suggested Tutorials:
+    </h2>
+    <div style="overflow: hidden;">   
+        <ul>
+            <li><a class="font-weight-bold" routerLink = "/tutorials/register">Registering your SendBlaster Installation (Free or Pro Editions)</a></li>
+            <li><a class="font-weight-bold" (click)="scroll(Install)">Sending your first email</a></li>
+        </ul>
+</div>
+</div>
+
+<div #TroubleShooting class="inner-content main-title clearfix">
+    <h2>
+        Troubleshooting SendBlaster Installation
+    </h2>
+<p>
+If you face any problem during SendBlaster installation, or you have any question related to installing SendBlaster, please submit a <b>Trouble Ticket</b> by using the bellow button:
+</p>
+<p style="text-align: center; "><a target="_blank" href="https://www.sendblaster.com/services/support/ticketing/system/?lang=en" title="Submit Trouble Ticket" class="submit-ticket">Submit Trouble Ticket</a></p> 
+</div>
+
+</div>
