--- a/src/app/tutorials/tutorials.component.html
+++ b/src/app/tutorials/tutorials.component.html
@@ -1,7 +1,7 @@
 <div class="grid-top-pad">
 
-<app-tutorial-card title="Download & Install SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="green" imageurl="./assets/img/tutorials/download-install.jpg" level="Beginner" routerLink="download-install"></app-tutorial-card>
-<app-tutorial-card title="Register SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="white" imageurl="./assets/img/tutorials/register-sendblaster.png" level="Beginner" routerLink="register"></app-tutorial-card>
-
+<app-tutorial-card title="Downloading & Installing SendBlaster" desc="(Free & Pro Editions)" backgroundcolor="green" imageurl="./assets/img/tutorials/download-install.jpg" level="Beginner" routerLink="download-install"></app-tutorial-card>
+<app-tutorial-card title="Registering SendBlaster FREE" desc="&nbsp;" backgroundcolor="white" imageurl="./assets/img/tutorials/register-sendblaster.png" level="Beginner" routerLink="register-sendblaster-free"></app-tutorial-card>
+<app-tutorial-card title="Sending Your First Newsletter" desc="&nbsp;" backgroundcolor="#99ccff" imageurl="./assets/img/tutorials/1st-email.jpg" level="Beginner" routerLink="sending-your-first-newsletter"></app-tutorial-card>
 
 </div>
